# git_practice

./: Collaboration.md  E_plotting.py  F_PINN.py  G_bayesian.py  H_ensamble.py  README.md  pyproject.toml  simple_code.md
SVG/: SVG2.txt  SVG3.txt
examples/: main.py
src/forecast/: A_data_loader.py  B_preprocessing.py  C_models.py  D_predictor.py  E_evaluation.py
tests/: test_A_data_loader.py  test_B_preprocessing.py  test_C_models.py  test_D_predictor.py  test_E_evaluation.py
